--- a/nvme-sles15-spx.adoc
+++ b/nvme-sles15-spx.adoc
@@ -458,6 +458,8 @@ include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 
 Beginning with SUSE Linux Enterprise Server 15 SP6, the default iopolicy for NVMe-oF is set to `round-robin`. If you want to change the iopolicy to `queue-depth`, modify the udev rules file as follows:
 
+.Steps
+
 . Open the udev rules file in a text editor with root privileges:
 +
 [source,cli]
