--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -59,6 +59,8 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 |===
 
 |If your SUSE Linux Enterprise Server version is .. | Learn about ..
+|16
+|link:nvme-sles16-spx.html[Configuring NVMe for SUSE Linux Enterprise Server 16]
 |15 SPx series
 |link:nvme-sles15-spx.html[Configuring NVMe for SUSE Linux Enterprise Server 15 SPx]
 |===
