--- a/_include/nvme/nvme-secure-in-band-authentication.adoc
+++ b/_include/nvme/nvme-secure-in-band-authentication.adoc
@@ -2,7 +2,9 @@ Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVM
 
 To set up secure authentication, each host or controller must be associated with a `DH-HMAC-CHAP` key, which is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
-You can set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
+.Steps
+
+Set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
 
 [role="tabbed-block"]
 =====
@@ -10,7 +12,6 @@ You can set up secure in-band authentication using the CLI or a config JSON file
 --
 Set up secure in-band authentication using the CLI. 
 
-.Steps
 . Obtain the host NQN:
 +
 ----
@@ -89,7 +90,6 @@ When multiple NVMe subsystems are available on the ONTAP controller configuratio
 
 Use the `-o` option to generate the JSON file. See the NVMe connect-all manual pages for more syntax options.
 
-.Steps
 . Configure the JSON file:
 +
 [NOTE]
