--- a/nvme-sles15-spx.adoc
+++ b/nvme-sles15-spx.adoc
@@ -126,6 +126,8 @@ Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure 
 
 Configure NVMe/FC for a Broadcom/Emulex FC adapter.
 
+.Steps 
+
 . Verify that you are using the supported adapter model:
 
 .. Display the model names:
@@ -276,6 +278,8 @@ FCP CMPL: xb 0000018a Err 000005ca
 
 Configure NVMe/FC for a Marvell/QLogic adapter.
 
+.Steps 
+
 . Verify that you are running the supported adapter driver and firmware versions:
 +
 [source,cli]
@@ -302,6 +306,8 @@ The expected output is 1.
 .NVMe/TCP
 --
 The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP `connect` or `connect-all` operations manually.
+
+.Steps
 
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
@@ -451,7 +457,7 @@ Beginning with SUSE Linux Enterprise Server 15 SP6, the setting for the NVMe/TCP
 
 include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 ====
-
+--
 =====
 
 == Step 4: Optionally, modify the iopolicy in the udev rules
@@ -894,6 +900,8 @@ Transport Service Identifier: 8009
 Secure in-band authentication is supported over NVMe/TCP between a SUSE Linux Enterprise Server 15 SPx host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A DH-HMAC-CHAP key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
+
+.Steps
 
 Set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
 
