--- a/nvme-sles16-spx.adoc
+++ b/nvme-sles16-spx.adoc
@@ -903,6 +903,8 @@ Secure in-band authentication is supported over NVMe/TCP between a SUSE Linux En
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A DH-HMAC-CHAP key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
+.Steps
+
 Set up secure in-band authentication using the CLI or a config JSON file. If you need to specify different dhchap keys for different subsystems, you must use a config JSON file. 
 
 [role="tabbed-block"]
