--- a/nvme-ubuntu-2404.adoc
+++ b/nvme-ubuntu-2404.adoc
@@ -195,6 +195,8 @@ The native inbox qla2xxx driver included in the Ubuntu 24.04 GA kernel has the l
 
 Configure NVMe/FC for a Marvell/QLogic adapter.
 
+.Steps 
+
 . Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
