Update tab leads

--- a/hu-wuhu-configuration.adoc
+++ b/hu-wuhu-configuration.adoc
@@ -42,7 +42,7 @@ The Windows Host Utilities installer automatically sets the Windows registry val
 ====
 .Windows registry values
 --
-All values are in decimal unless otherwise stated.
+All Windows registry values are in decimal unless otherwise stated.
 
 NOTE: HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 
@@ -145,7 +145,7 @@ Mode",
 
 .iSCSI HBA values
 --
-All values are in decimal unless otherwise stated.
+All iSCSI HBA values are in decimal unless otherwise stated.
 
 NOTE: HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 
@@ -193,7 +193,7 @@ The Windows Host Utilities installer automatically sets the Windows registry val
 
 .Windows registry values
 --
-All values are in decimal unless otherwise stated.
+All Windows registry values are in decimal unless otherwise stated.
 
 NOTE: HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 
@@ -294,7 +294,7 @@ Mode",
 
 .iSCSI HBA values
 --
-All values are in decimal unless otherwise stated.
+All iSCSI HBA values are in decimal unless otherwise stated.
 
 NOTE: HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 
