--- a/hu_centos_75.adoc
+++ b/hu_centos_75.adoc
@@ -27,7 +27,11 @@ You can use multipathing with CentOS 7.5 to manage ONTAP LUNs.
 
 include::_include/hu/linux-centos-multipathing-7x.adoc[]
 
+== Step 4: Optionally, exclude a device from multipathing
+
 include::_include/hu/exclude-device.adoc[]
+
+== Step 5: Customize multipath parameters for ONTAP LUNs
 
 include::_include/hu/linux-customize-parameters.adoc[]
 
