--- a/hu-ol-8x.adoc
+++ b/hu-ol-8x.adoc
@@ -29,11 +29,19 @@ NOTE: You can use the link:hu-rhel-8x.html#rhel-rhck[recommended settings for Re
 
 include::_include/hu/linux-ol-multipathing-chk-config.adoc[]
 
+== Step 4: Confirm the iSCSI configuration for your host
+
+include::_include/hu/linux-iscsi-configuration.adoc[]
+
+== Step 5: Optionally, exclude a device from multipathing
+
 include::_include/hu/exclude-device.adoc[]
+
+== Step 6: Customize multipath parameters for ONTAP LUNs
 
 include::_include/hu/linux-customize-parameters.adoc[]
 
-== Step 6: Review the known issues
+== Step 7: Review the known issues
 
 There are no known issues.
 
