--- a/hu-rhel-8x.adoc
+++ b/hu-rhel-8x.adoc
@@ -28,11 +28,19 @@ You can use multipathing with RHEL 8.x to manage ONTAP LUNs.
 
 include::_include/hu/linux-rhel-multipathing.adoc[]
 
+== Step 4: Confirm the iSCSI configuration for your host
+
+include::_include/hu/linux-iscsi-configuration.adoc[]
+
+== Step 5: Optionally, exclude a device from multipathing
+
 include::_include/hu/exclude-device.adoc[]
+
+== Step 6: Customize multipath parameters for ONTAP LUNs
 
 include::_include/hu/linux-customize-parameters.adoc[]
 
-== Step 6: Review the known issues
+== Step 7: Review the known issues
 
 RHEL 8.x with ONTAP storage has the following known issues.
 
