--- a/hu_citrix_82.adoc
+++ b/hu_citrix_82.adoc
@@ -28,9 +28,13 @@ You can use multipathing with Citrix Hypervisor 8.2 to manage ONTAP LUNs.
 
 include::_include/hu/citrix-8x-multipathing.adoc[]
 
-include::_include/hu/exclude-device-step3.adoc[]
+== Step 3: Optionally, exclude a device from multipathing
 
-include::_include/hu/linux-customize-parameters-step4.adoc[]
+include::_include/hu/exclude-device.adoc[]
+
+== Step 4: Customize multipath parameters for ONTAP LUNs
+
+include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 5: Review the known issues
 
