--- a/hu_rhel_70.adoc
+++ b/hu_rhel_70.adoc
@@ -28,7 +28,11 @@ You can use multipathing with RHEL 7.0 to manage ONTAP LUNs.
 
 include::_include/hu/linux-rhel-7x-multipathing.adoc[]
 
+== Step 4: Optionally, exclude a device from multipathing
+
 include::_include/hu/exclude-device.adoc[]
+
+== Step 5: Customize multipath parameters for ONTAP LUNs
 
 include::_include/hu/linux-customize-parameters.adoc[]
 
