--- a/hu_ubuntu_2004.adoc
+++ b/hu_ubuntu_2004.adoc
@@ -26,9 +26,13 @@ You can use multipathing with Ubuntu 20.04 to manage ONTAP LUNs.
 
 include::_include/hu/linux-ubuntu-multipathing.adoc[]
 
-include::_include/hu/exclude-device-step3.adoc[]
+== Step 3: Optionally, exclude a device from multipathing
 
-include::_include/hu/linux-customize-parameters-step4.adoc[]
+include::_include/hu/exclude-device.adoc[]
+
+== Step 4: Customize multipath parameters for ONTAP LUNs
+
+include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 5: Review the known issues
 
