--- a/hu_ubuntu_2204.adoc
+++ b/hu_ubuntu_2204.adoc
@@ -28,7 +28,11 @@ You can use multipathing with Ubuntu 22.04 to manage ONTAP LUNs.
 
 include::_include/hu/linux-ubuntu-multipathing.adoc[]
 
+== Step 4: Optionally, exclude a device from multipathing
+
 include::_include/hu/exclude-device.adoc[]
+
+== Step 5: Customize multipath parameters for ONTAP LUNs
 
 include::_include/hu/linux-customize-parameters.adoc[]
 
