Add HPE VME 8.0.x

--- a/hu-rhel-8x.adoc
+++ b/hu-rhel-8x.adoc
@@ -17,6 +17,8 @@ The Linux Host Utilities software provides management and diagnostic tools for L
 
 include::_include/hu/linux-enable-san-boot.adoc[]
 
+== Step 2: Install the Linux Host Utilities
+
 include::_include/hu/install-linux-host-utilities-80.adoc[]
 [[rhel-rhck]]
 
