--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu-rhel-10x.html
-keywords: host utilities, red hat, rhel, linux, 10.x, netapp, ontap, rhel 
-summary: Install Linux Host Utilities on a RHEL 10.x host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+permalink: hu-hpe-vme-80x.html
+keywords: host utilities, red hat, rhel, linux, 20.04, netapp, ontap, ubuntu 
+summary: Install Linux Host Utilities on an Ubuntu 24.04 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 10.x for FCP and iSCSI with ONTAP storage
+= Configure HPE VME 8.0.x for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,17 +13,15 @@ summary: Install Linux Host Utilities on a RHEL 10.x host to manage FCP and iSCS
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 10.x host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a HPE VME 8.0.x host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-include::_include/hu/linux-enable-san-boot.adoc[]
-
-== Step 2: Install the Linux Host Utilities
+== Step 1: Install the Linux Host Utilities
 
 include::_include/hu/install-linux-host-utilities-80.adoc[]
 
-== Step 3: Confirm the multipath configuration for your host
+== Step 2: Confirm the multipath configuration for your host
 
-You can use multipathing with RHEL 10.x to manage ONTAP LUNs.
+You can use multipathing with HPE VME 8.0.x to manage ONTAP LUNs.
 
 To ensure that multipathing is configured correctly for your host, verify that the `/etc/multipath.conf` file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs.
 
@@ -94,21 +92,24 @@ The default multipath parameters support ASA, AFF, and FAS configurations. In th
 The following example outputs show the correct parameter settings and path status for ONTAP LUNs in an ASA, AFF, or FAS configuration. 
 +
 [role="tabbed-block"]
-====
+=====
 .ASA configuration
 --
 An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time. 
 
+.Show example
+[%collapsible]
+====
 ----
 # multipath -ll
-3600a098038314e535a24584e4b496252 dm-32 NETAPP,LUN C-Mode
-size=10G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
+3600a098038314c4a433f577471797958 dm-2 NETAPP,LUN C-Mode size=180G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
 `-+- policy='service-time 0' prio=50 status=active
-  |- 11:0:0:41 sdan 66:112  active ready running
-  |- 11:0:1:41 sdcb 68:240  active ready running
-  |- 14:0:2:41 sdfd 129:240 active ready running
-  `- 14:0:0:41 sddp 71:112  active ready running
+  |- 14:0:0:0  sdc  8:32   active ready running
+  |- 17:0:0:0  sdas 66:192 active ready running
+  |- 14:0:3:0  sdar 66:176 active ready running
+  `- 17:0:3:0  sdch 69:80  active ready running
 ----
+====
 --
 
 .AFF or FAS configuration
@@ -117,10 +118,12 @@ An AFF or FAS configuration should have two groups of paths with higher and lowe
 
 The following example displays the output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
 
+.Show example
+[%collapsible]
+====
 ----
 # multipath -ll
-3600a0980383149764b5d567257516273 dm-0 NETAPP,LUN C-Mode
-size=150G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
+3600a0980383149764b5d567257516273 dm-0 NETAPP,LUN C-Mode size=150G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp=rw
 |-+- policy='service-time 0' prio=50 status=active
 | |- 16:0:3:0  sdcg 69:64  active ready running
 | `- 10:0:0:0  sdb  8:16   active ready running
@@ -128,14 +131,71 @@ size=150G features='3 queue_if_no_path pg_init_retries 50' hwhandler='1 alua' wp
   |- 10:0:1:0  sdc  8:32   active ready running
   `- 16:0:2:0  sdcf 69:48  active ready running
 ----
+====
 --
+=====
+
+== Step 3: Optionally, exclude a device from multipathing
+
+If required, you can exclude a device from multipathing by adding the WWID for the unwanted device to the "blacklist" stanza for the `multipath.conf` file.
+
+.Steps
+
+. Determine the WWID:
++
+[source,cli]
+----
+/lib/udev/scsi_id -gud /dev/sda
+----
++
+"sda" is the local SCSI disk that you want to add to the blacklist.
++
+An example WWID is `360030057024d0730239134810c0cb833`.
+
+. Add the WWID to the "blacklist" stanza:
++
+[source,cli]
+----
+blacklist {
+	     wwid   360030057024d0730239134810c0cb833
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+== Step 4: Customize multipath parameters for ONTAP LUNs
+
+If your host is connected to LUNs from other vendors and any of the multipath parameter settings are overridden, you need to correct them by adding stanzas later in the `multipath.conf` file that apply specifically to ONTAP LUNs. If you don't do this, the ONTAP LUNs might not work as expected. 
+
+Check your `/etc/multipath.conf` file, especially in the defaults section, for settings that might be overriding the <<multipath-parameter-settings,default settings for multipath parameters>>. 
+
+CAUTION: You shouldn't override the recommended parameter settings for ONTAP LUNs. These settings are required for optimal performance of your host configuration. Contact NetApp support, your OS vendor, or both for more information.
+
+The following example shows how to correct an overridden default. In this example, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that aren't compatible with ONTAP LUNs, and you can't remove these parameters because ONTAP storage arrays are still attached to the host. Instead, you correct the values for `path_checker` and `no_path_retry` by adding a device stanza to the `multipath.conf` file that applies specifically to the ONTAP LUNs.
+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
+defaults {
+   path_checker      *readsector0*
+   no_path_retry     *fail*
+}
+
+devices {
+   device {
+      vendor          "NETAPP"
+      product         "LUN"
+      no_path_retry   *queue*
+      path_checker    *tur*
+   }
+}
+----
 ====
 
-include::_include/hu/exclude-device.adoc[]
-
-include::_include/hu/linux-customize-parameters.adoc[]
-
-== Step 6: Review the known issues
+== Step 5: Review the known issues
 
 There are no known issues.
 
@@ -143,11 +203,7 @@ There are no known issues.
 
 include::_include/hu/use-linux-host-utilities.adoc[]
 
-include::_include/hu/asm-mirroring.adoc[]
-
-include::_include/hu/kvm-redhat.adoc[]
 
 // 2025 Dec 17, ONTAPDOC-3531
-//ONTAPDOC-2987 8-May-2025
-//ONTAPDOC-2561 25-Nov-2024
-//ONTAPDOC-1584 1-Feb-2024
+// 2025 JULY 15, ONTAPDOC-3128
+// 2024 AUG 13, ONTAPDOC-2294
