--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: hu-hpe-vme-80x.html
 keywords: host utilities, red hat, rhel, linux, 20.04, netapp, ontap, ubuntu 
-summary: Install Linux Host Utilities on a HPE VME 8.0.x4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a HPE VME 8.0.x host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
 = Configure HPE VME 8.0.x for FCP and iSCSI with ONTAP storage
 :hardbreaks:
