--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -20,6 +20,9 @@ Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varie
 
 |Feature | SUSE Linux Enterprise Server host version| ONTAP version
 
+|NVMe/TCP reports all optimized paths for ASA r2 platforms
+a|16
+|9.16.1 or later
 |Transport Layer Security (TLS) 1.3 encryption is supported for NVMe/TCP
 a|15 SP6 or later
  |9.16.1 or later
@@ -58,7 +61,7 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 [cols="50,50",options="header"]
 |===
 
-|If your SUSE Linux Enterprise Server version is .. | Learn about ..
+|If your SUSE Linux Enterprise Server version is ... | Learn about ...
 |16
 |link:nvme-sles16-spx.html[Configuring NVMe for SUSE Linux Enterprise Server 16]
 |15 SPx series
