Add the Jira label

--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -71,3 +71,5 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 .Related information
 
 link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols^]
+
+// 2026 Jan 12: ONTAPDOC-3475
