--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -201,8 +201,8 @@ There are no known issues.
 
 == What's next?
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
+. include::_include/hu/use-linux-host-utilities.adoc[]
+. Create a host host cluster and configure HPR VME data stores. Refer to the HPE documentation for more information.
 
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JULY 15, ONTAPDOC-3128
