--- a/hu-hpe-vme-80x.adoc
+++ b/hu-hpe-vme-80x.adoc
@@ -203,7 +203,7 @@ There are no known issues.
 
 include::_include/hu/use-linux-host-utilities.adoc[]
 
-* Create a host host cluster and configure HPR VME data stores. Refer to the HPE documentation for more information.
+* Create a host host cluster and configure HPE VME data stores. Refer to the HPE documentation for more information.
 
 // 2025 Dec 17, ONTAPDOC-3531
 // 2025 JULY 15, ONTAPDOC-3128
