--- a/nvme-sles-supported-features.adoc
+++ b/nvme-sles-supported-features.adoc
@@ -20,7 +20,7 @@ Features supported for host configuration with NVMe over Fabrics (NVMe-oF) varie
 
 |Feature | SUSE Linux Enterprise Server host version| ONTAP version
 
-|NVMe/TCP reports all optimized paths for ASA r2 platforms
+|NVMe/TCP reports all optimized paths for ASA r2 systems
 a|16
 |9.16.1 or later
 |Transport Layer Security (TLS) 1.3 encryption is supported for NVMe/TCP
