Add examles outputs for ubuntu

--- a/hu-ol-9x.adoc
+++ b/hu-ol-9x.adoc
@@ -59,3 +59,5 @@ Make sure the package installing the library is installed & loaded
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+// 2026 JAN 15, ONTAPDOC-3486
