--- a/hu-rockylinux-10x.adoc
+++ b/hu-rockylinux-10x.adoc
@@ -161,6 +161,7 @@ include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
 
+// 2026 JAN 15, ONTAPDOC-3486
 // 2025 JUN 25, ONTAPDOC-3090
 // ONTAPDOC-2987 8-May-2025
 // ONTAPDOC-2561 25-Nov-2024
