--- a/_include/hu/linux-iscsi-configuration.adoc
+++ b/_include/hu/linux-iscsi-configuration.adoc
@@ -1,4 +1,4 @@
-To ensure that multipathing is configured correctly for your host, set the timeout parameter and confirm that the iSCSI service is running and connecting to the iSCSI targets.
+To ensure that multipathing is configured correctly for your host, set the `timeout` parameter and confirm that the iSCSI service is running and connecting to the iSCSI targets.
 
 .Before you begin
 Verify that the iSCSI initiator package (iscsi-initiator-utils) is installed. 
@@ -21,7 +21,7 @@ Edit /etc/iscsi/iscsid.conf:
 node.session.timeo.replacement_timeout = 5
 ----
 +
-The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer should wait for a timed-out path or session to reestablish itself before failing any commands on it. NetApp recommends setting the value of `replacement_timeout` to 5 in the iSCSI configuration file for Oracle Linux 9.x.
+The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer should wait for a timed-out path or session to reestablish itself before failing any commands on it. NetApp recommends setting the value of `replacement_timeout` to 5 in the iSCSI configuration file.
 
 . Enable the iSCSI service:
 +
