--- a/hu-ol-8x.adoc
+++ b/hu-ol-8x.adoc
@@ -50,3 +50,5 @@ There are no known issues.
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+// 2026 JAN 15, ONTAPDOC-3486
