--- a/hu-rhel-8x.adoc
+++ b/hu-rhel-8x.adoc
@@ -81,3 +81,5 @@ RHEL 8.x with ONTAP storage has the following known issues.
 include::_include/hu/use-linux-host-utilities.adoc[]
 
 include::_include/hu/asm-mirroring.adoc[]
+
+// 2026 JAN 15, ONTAPDOC-3486
