--- a/hu-wuhu-configuration.adoc
+++ b/hu-wuhu-configuration.adoc
@@ -322,7 +322,7 @@ NOTE: HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 .NVMe parameters
 --
 
-Windows Host Utilities 7.2 updates the following NVMe Emulex driver parameters during installation
+Windows Host Utilities 7.2 updates the following NVMe Emulex driver parameters during installation:
 
 * EnableNVMe = 1
 * NVMEMode = 0
