--- a/hu-wuhu-configuration.adoc
+++ b/hu-wuhu-configuration.adoc
@@ -4,7 +4,7 @@ permalink: hu-wuhu-configuration.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
-= Learn about the Windows Host Utilities configuration for ONTAP storage
+= Review the Windows Host Utilities configuration for ONTAP storage
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -34,7 +34,7 @@ You need to change the LimTransferSize parameter value after installing Windows 
 For all other parameters and registry keys for Windows Host Utilities 8.0, 7.2, or 7.1, you don't need to change the values unless technical support advises you to do so.
 ====
 
-== Configuration settings for Windows Host Utilities 8.0
+== Review the configuration settings for Windows Host Utilities 8.0
 
 The Windows Host Utilities installer automatically sets the Windows registry values and the iSCSI and NVMe HBA parameters based on the choices that you make during the installation. Review these values and the operating system version.
 
@@ -181,7 +181,7 @@ Windows Host Utilities 8.0 updates the following NVMe Emulex driver parameters d
 --
 ====
 
-== Configuration settings for Windows Host Utilities 7.2
+== Review the configuration settings for Windows Host Utilities 7.2
 
 The Windows Host Utilities installer automatically sets the Windows registry values and the iSCSI and NVMe HBA parameters based on the choices that you make during the installation. Review these values and the operating system version. 
 
@@ -332,7 +332,7 @@ The LimTransferSize parameter is automatically set to "1" when you install Windo
 --
 ====
 
-== Configuration settings for Windows Host Utilities 7.1
+== Review the configuration settings for Windows Host Utilities 7.1
 
 The Windows Host Utilities installer automatically sets registry values based on the choices that you make during installation. Review these registry values and the operating system version. All values are in decimal unless otherwise noted. 
 
@@ -456,7 +456,7 @@ The Windows Host Utilities installer automatically sets registry values based on
 
 See the https://docs.microsoft.com/en-us/troubleshoot/windows-server/performance/windows-registry-advanced-users[Microsoft documents^] for the registry parameter details.
 
-== FC HBA values set by Windows Host Utilities
+== Learn about the FC HBA values set by Windows Host Utilities
 
 The Windows Host Utilities installer sets the required timeout values for Emulex and QLogic FC HBAs on systems using FC. 
 
